--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
         </div>
     </header>
 <!--header-->
+    <section class="_me">
+        <div class="container">
+            <div class="_me_wrapper">
+                <div class="_me_name"><h1 class="_me_name_text">Denis Novik</h1></div>
+                <div class="_me_job"><p class="_me_job_text">UX | UI designer
+                    24 years old, Minsk</p></div>
+                <div class="menu_language">
+                    <a href="#" class="language"><h3 >RU</h3></a>
+                    <h3 class="language_mark">|</h3>
+                    <a href="#" class="language"><h3 >ENG</h3></a>
+                </div>
+            </div>
+            <div class="_me_photo"><img src="img/my_photo.jpg" alt="my_photo.jpg"></div>
+        </div>
+    </section>
+<!--_me-->
 </body>
 
 
