--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
     </header>
 <!--header-->
+
     <section class="_me">
         <div class="container">
             <div class="_me_wrapper">
@@ -42,7 +43,23 @@
         </div>
     </section>
 <!--_me-->
+
+    <section class="about_me">
+        <div class="container">
+            <div class="about_me_wrapper">
+                <div class="title">
+                    <h2 class="title_text">About me</h2>
+                </div>
+                <div class="about_me_description">
+                    <p class="about_me_description_text">Hi, I'm Denis – UX/UI designer from Minsk.<br>
+                        I'm interested in design and everything connected with it.</p>
+                    <p class="about_me_description_text">I'm studying at courses "Web and mobile design <br>
+                        interfaces" in IT-Academy.</p>
+                    <p class="about_me_description_text">Ready to implement excellent projects <br>
+                        with wonderful people.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
-
-
 </html>
