Made portfolio section

--- a/index.html
+++ b/index.html
@@ -61,5 +61,89 @@
             </div>
         </div>
     </section>
+<!--about_me-->
+
+    <section class="skills">
+        <div class="container">
+            <div class="skills_wrapper">
+                <div class="title"><h2 class="title_text">Skills</h2></div>
+                <div class="skills_subtitle"><p class="skills_subtitle_text">I work in such programs as</p></div>
+                <div class="programs">
+                    <div class="programs_item">
+                        <img src="img/programs/photoshop.svg" alt="photoshop.svg">
+                        <div class="program_name"><h4 class="program_name_text">Adobe<br>Photoshop</h4></div>
+                        <div class="rating">
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="empty_star"><img src="img/empty_star.svg" alt="empty_star.svg"></div>
+                        </div>
+                    </div>
+
+                    <div class="programs_item">
+                        <img src="img/programs/illustrator.svg" alt="photoshop.svg">
+                        <div class="program_name"><h4 class="program_name_text">Adobe<br>Illustrator</h4></div>
+                        <div class="rating">
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="empty_star"><img src="img/empty_star.svg" alt="empty_star.svg"></div>
+                            <div class="empty_star"><img src="img/empty_star.svg" alt="empty_star.svg"></div>
+                        </div>
+                    </div>
+
+                    <div class="programs_item">
+                        <img src="img/programs/after_effects.svg" alt="photoshop.svg">
+                        <div class="program_name"><h4 class="program_name_text">Adobe<br>After Effects</h4></div>
+                        <div class="rating">
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="empty_star"><img src="img/empty_star.svg" alt="empty_star.svg"></div>
+                        </div>
+                    </div>
+
+                    <div class="programs_item">
+                        <img src="img/programs/figma.svg" alt="photoshop.svg">
+                        <div class="program_name"><h4 class="program_name_text">Figma</h4></div>
+                        <div class="rating">
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="star"><img src="img/black_star.svg" alt="black_star.svg"></div>
+                            <div class="empty_star"><img src="img/empty_star.svg" alt="empty_star.svg"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--skills-->
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="portfolio_wrapper">
+                <div class="title"><h2 class="title_text">Portfolio</h2></div>
+                <div class="portfolio_projects">
+                    <div class="portfolio_item">
+                        <img src="img/cards/card-1.jpg" alt="card-1.jpg">
+                        <a href="#" class="portfolio_name"><p class="portfolio_name_text">Online fashion store - Homepage</p></a>
+                    </div>
+
+                    <div class="portfolio_item">
+                        <img src="img/cards/card-2.jpg" alt="card-1.jpg">
+                        <a href="#" class="portfolio_name"><p class="portfolio_name_text">Reebok Store - Concept</p></a>
+                    </div>
+
+                    <div class="portfolio_item">
+                        <img src="img/cards/card-3.jpg" alt="card-1.jpg">
+                        <a href="#" class="portfolio_name"><p class="portfolio_name_text">Braun Landing Page - Concept</p></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
