--- a/index.html
+++ b/index.html
@@ -145,5 +145,32 @@
             </div>
         </div>
     </section>
+<!--portfolio-->
+
+    <footer class="contacts">
+        <div class="container">
+            <div class="contacts_wrapper">
+                <div class="contacts_content">
+                    <div class="title"><h2 class="title_text">Contacts</h2></div>
+                    <div class="contacts_subtitle"><p class="contacts_subtitle_text">Want to know more or just chat?<br>
+                        You are welcome!</p></div>
+                    <button class="button"><p class="button_text">Send message</p></button>
+                </div>
+
+                <div class="socials">
+                    <a href="#" class="social_item"><img src="img/socials/soc-1.svg" alt="soc-1.svg"></a>
+                    <a href="#" class="social_item"><img src="img/socials/soc-2.svg" alt="soc-2.svg"></a>
+                    <a href="#" class="social_item"><img src="img/socials/soc-3.svg" alt="soc-3.svg"></a>
+                    <a href="#" class="social_item"><img src="img/socials/soc-4.svg" alt="soc-4.svg"></a>
+                </div>
+
+                <div class="end">
+                    <p class="end_text">Like me on<br>
+                        LinkedIn, Instagram, Behance, Dribble</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!--footer-->
 </body>
 </html>
